Pull request 501: Decrease size of Bamboo working directory size after build
Squashed commit of the following:

commit 8bb1399f351b593b4116d14e221df8bba0cb53a5
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Sep 17 21:47:31 2025 +0300

    Fix build

commit fe0d1eed459e378d6d410abc018831ed83f5c573
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Sep 17 21:40:06 2025 +0300

    Debug

commit d717a146e387672969c0ac164531edfcdce5a852
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Sep 17 21:31:08 2025 +0300

    Fix build

commit 316b722cf33b00bce5d74522717f34c81736e812
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Sep 17 21:22:20 2025 +0300

    Fix build

commit 675d35a1aa8c9ca31786b702b3f07a9c3b4c0d88
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed Sep 17 20:46:18 2025 +0300

    skipci: Fix specs

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -47,6 +47,8 @@ Build binaries:
             export OUTPUT_DIR=${PWD}/output
             export SOURCE_DIR=${PWD}
 
+            trap "rm -rf ${SOURCE_DIR}/vpn-libs ${SOURCE_DIR}/vpn-libs-endpoint" EXIT
+
             export CONAN_REPO_URL=${bamboo.conanRepoUrl}
             vpn-libs/integration-tests/build_client.sh
             vpn-libs/integration-tests/build_endpoint.sh
@@ -171,14 +173,6 @@ Run live test:
             python3 -m pip install conan --upgrade
 
             conan remote add --index 0 art ${bamboo.conanRepoUrl} || true
-        description: conan remote
-    - script:
-        interpreter: SHELL
-        scripts:
-          - |-
-            #!/bin/bash
-
-            set -x -e
 
             SRC_ROOT=${PWD}
             mkdir -p /build_no_asan && cd /build_no_asan
