skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1069,3 +1069,5 @@ commit_hash:
     hash: "d6af27f67cdac3ba751534bf5ae46a3aadf7f0d7"
   "0.99.12":
     hash: "0db15915c28d2430a1a1aa27e553e615f706d08e"
+  "0.99.13":
+    hash: "99622b8847eacf751f46f969937419412816ff1c"
