Update increment version script part 2

--- a/bamboo-specs/increment-version.yaml
+++ b/bamboo-specs/increment-version.yaml
@@ -44,6 +44,7 @@ Increment version:
             git reset
             git add conandata.yml
             git add CHANGELOG.md
+            git add platform/android/lib/build.gradle.kts
             git commit -m "skipci: Automatic version increment by Bamboo"
             git push
 
