skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1075,3 +1075,5 @@ commit_hash:
     hash: "018d1e2c0cd1d72352f53245c905eaf2ea2476fe"
   "0.99.15":
     hash: "1181f27a7c5221655b2819370ec56bd8890899ee"
+  "0.99.16":
+    hash: "fd84feb4636193aa7d0036c98fc655a46223eb75"
