Pull request 518: Prepare TrustTunnel for GH publishing
Squashed commit of the following:

commit 2fa723cebe008a1d1c8d372ef2cc840e12373f51
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Nov 10 17:21:18 2025 +0400

    Update android publishing url and id

commit 9b2495c4dbd98e0bb3491aeaf93954766bf92172
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Nov 10 16:33:19 2025 +0400

    AG-48119 Rename TrustTunnel to TrustTunnelClient for apple adapter

commit 67e0eff087cb2652570aeb445bcddf2a06a9fc89
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Nov 10 11:28:55 2025 +0400

    Prepare podspec to use artifacts from github

commit eaba9a2d62179a061135ae95404256cbbf979c1c
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Fri Nov 7 16:00:02 2025 +0400

    Update apple framework version in increment_version script

commit 8e25aff1332cce030aa268227d01db07aeb8dfa0
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Fri Nov 7 15:58:35 2025 +0400

    Correct version for objc framework

commit d4bf75836508bc48ac2dbee5a49fd10e0dd445ab
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Fri Nov 7 15:53:36 2025 +0400

    Fix versions for xcode project

--- a/platform/apple/Podfile
+++ b/platform/apple/Podfile
@@ -1,10 +1,10 @@
 use_frameworks! :linkage => :static
 abstract_target 'CommonPods' do
-  target 'TrustTunnel-iOS' do
+  target 'TrustTunnelClient-iOS' do
     platform :ios, '14.0'
     pod 'TOMLDecoder'
   end
-  target 'TrustTunnel-MacOS' do
+  target 'TrustTunnelClient-MacOS' do
     platform :osx, '10.15'
     pod 'TOMLDecoder'
   end
@@ -21,4 +21,4 @@ post_install do |installer|
   end
 end
 
-workspace 'TrustTunnel.xcworkspace'
+workspace 'TrustTunnelClient.xcworkspace'
