--- a/platform/apple/VpnClient/CMakeLists.txt
+++ b/platform/apple/VpnClient/CMakeLists.txt
@@ -49,10 +49,10 @@ add_library(${PROJECT_NAME} SHARED
 set_target_properties(${PROJECT_NAME} PROPERTIES
     FRAMEWORK TRUE
     FRAMEWORK_VERSION A
-    VERSION 0.16.48
+    VERSION 0.99.20
     PUBLIC_HEADER VpnClient.h
     MACOSX_FRAMEWORK_INFO_PLIST "${INFOPLIST_FILE}"
-    MACOSX_FRAMEWORK_IDENTIFIER com.adguard.trusttunnel
+    MACOSX_FRAMEWORK_IDENTIFIER com.adguard.TrustTunnel.VpnClientFramework
     INSTALL_NAME_DIR "@rpath"
     BUILD_WITH_INSTALL_RPATH 1
     COMPILE_FLAGS "-fobjc-arc"
