skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1099,3 +1099,5 @@ commit_hash:
     hash: "4dc0fb3aefb9ac614173b2f75fe643dd1ce8100d"
   "0.99.27":
     hash: "bd5f7e4e27ac3868810ce8e24a2ebb673e88e996"
+  "0.99.28":
+    hash: "6bc81b9057614655cff5b37a74a9c9ec4c312d77"
