skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1101,3 +1101,5 @@ commit_hash:
     hash: "bd5f7e4e27ac3868810ce8e24a2ebb673e88e996"
   "0.99.28":
     hash: "6bc81b9057614655cff5b37a74a9c9ec4c312d77"
+  "0.99.29":
+    hash: "4449424d9f9aff6019c5eb5bafe9f86d9204ad49"
