Pull request 533: Rebrand standalone client to trusttunnel client
Squashed commit of the following:

commit e7d93c01de4ed9e20ef33276375b47490fb39faa
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 13:04:57 2025 +0400

    Rename in makefile

commit 9fea5dcb16f5b7e5b63dc3a7aa32f26a7265672b
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 13:04:53 2025 +0400

    Rename in docs

commit 98108b8bed6127f286b835f820893a804bef00fd
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 13:02:03 2025 +0400

    Rename in setup_wizzard

commit bf63457c0b0b053582e195bc81bee3e5fec73e54
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 13:01:21 2025 +0400

    Rename vars and funcs

commit e1d5cf20ffb6d2bd6a202f14fd6bdc2b3c9edd98
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:58:43 2025 +0400

    Rename in integration tests

commit 5748ac055ce8b1320b3104d7461cc81ca499fe1c
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:57:15 2025 +0400

    Rename in specs

commit f6e7e0410e0ef745af0c22fd890846fdf0c076b7
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:52:58 2025 +0400

    Rename library

commit 404c2f2515965e5c9267fd3d7c3f82fff7e829a2
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:48:46 2025 +0400

    Rename executable

commit 5a5acb4285ff9a2cd1c26fa0583bedcc7c4d3ada
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:45:47 2025 +0400

    Fix build

commit ae3753f6e7e3e8bde4614e95eaaf68855311a9b0
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:42:38 2025 +0400

    Rename folder for trusttunnel

commit 522cadd62dbcc5be3b69e03671906f9a20038945
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Nov 19 12:40:22 2025 +0400

    Rename StandaloneUtils to TrustTunnelCliUtils

commit 3bb0dc2de5f950008b907bda5837ea545ca6c64b
Author: Andrey Yakushin <a.yakushin@adguard.co

--- a/bamboo-specs/run-browser-integration-test.yaml
+++ b/bamboo-specs/run-browser-integration-test.yaml
@@ -52,9 +52,9 @@ Build binaries:
   requirements:
     - adg-privileged-docker
   artifacts:
-    - name: standalone_client
+    - name: trusttunnel_client
       location: output
-      pattern: standalone_client
+      pattern: trusttunnel_client
       shared: true
     - name: vpn_endpoint
       location: output
@@ -68,7 +68,7 @@ Run integration test:
     image: adguard/core-libs-testing:2.6.0
     docker-run-arguments: [ --privileged, --device=/dev/net/tun ]
   artifact-subscriptions:
-    - artifact: standalone_client
+    - artifact: trusttunnel_client
       destination: output
     - artifact: vpn_endpoint
       destination: output
