skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1129,3 +1129,5 @@ commit_hash:
     hash: "fcbc0c5662030c1bf24ca20f3a9acd280d459ae9"
   "0.99.42":
     hash: "b1a651c933ef4d0f7c8a76f3e85c68a7bd357522"
+  "0.99.43":
+    hash: "cd1a1bb8868d4094602e0ff9f7845ecffd841f66"
