Pull request 545: 💡 Enhance: Add some useful instructions for Android part
Squashed commit of the following:

commit a79fd2dc8f8abb442c5be7ddd43b8a4c2992dc04
Author: Artem Ivanov <a.ivanov@adguard.com>
Date:   Wed Dec 3 04:40:23 2025 +0800

    💡 Enhance: Add some useful instructions for Android part

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 cmake-build-*/
 build/
+.idea/
+.DS_Store
+CmakeUserPresets.json
+pyvenv.cfg
 
 # Conan
 # fixme: Remove when the repo will be adapted to out-of-tree build model.
@@ -11,3 +15,5 @@ conaninfo.txt
 graph_info.json
 conan/
 cmake/conan_provider.cmake
+lib/
+bin/
