Pull request 549: Fix .gitignore
Squashed commit of the following:

commit 1ef81a6ffa541238a132e829b29f6251ff206942
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Thu Dec 4 10:07:37 2025 +0300

    Applied suggestion

commit 97924c07a945943d334fc5a944bf0c846552b7fe
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Thu Dec 4 09:06:02 2025 +0200

    Fix .gitignore

commit 4d16ac3d5e590083b490ccb24f3ef1639e552283
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Thu Dec 4 09:04:58 2025 +0200

    Fix .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,12 @@ build/
 .DS_Store
 CmakeUserPresets.json
 pyvenv.cfg
+.clangd/
 
-# Conan
-# fixme: Remove when the repo will be adapted to out-of-tree build model.
-#        As for now, the vpn-libs build is adapted to in-tree building model, so Conan
-#        stores these files in the project root directory instead of the build folder.
+# Conan and conan-cmake create some files in-tree by design
 conan.lock
 conanbuildinfo.*
 conaninfo.txt
 graph_info.json
 conan/
 cmake/conan_provider.cmake
-lib/
-bin/
