skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1155,3 +1155,5 @@ commit_hash:
     hash: "830ec3b4934cd9b2bc1d65f47fef78ea258b813a"
   "0.99.55":
     hash: "8f1ce4893fc0be3b395676778b764adc3db49b31"
+  "0.99.56":
+    hash: "b8e623dc5fb5a11e564ef46b139907f286dd7978"
