--- a/conandata.yml
+++ b/conandata.yml
@@ -1167,3 +1167,5 @@ commit_hash:
     hash: "3a05b8abcd8e11c872a5e78f0e6d755a1e719234"
   "0.99.61":
     hash: "f6d30c0b423d8259087dbf2b4038c3c5e4ee66dd"
+  "0.99.62":
+    hash: "8543ddc8c26bcb499f7068122c5113853342c292"
