skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1171,3 +1171,5 @@ commit_hash:
     hash: "8543ddc8c26bcb499f7068122c5113853342c292"
   "0.99.63":
     hash: "75e1f6c92bdc079176d52ecbb7b1ab26248db296"
+  "0.99.64":
+    hash: "78d40cefed2335afd14b4892dabc1fa18ecdec27"
