Pull request 565: Fix integration tests: vpn_endpoint renamed to trusttunnel_endpoint
Squashed commit of the following:

commit 058c4b69213dd85cf8ebd046fe0111232c40a551
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Wed Dec 17 23:27:39 2025 +0400

    Fix integration tests

--- a/bamboo-specs/run-browser-integration-test.yaml
+++ b/bamboo-specs/run-browser-integration-test.yaml
@@ -58,7 +58,7 @@ Build binaries:
       shared: true
     - name: vpn_endpoint
       location: output
-      pattern: vpn_endpoint
+      pattern: trusttunnel_endpoint
       shared: true
   artifact-subscriptions: [ ]
 Run integration test:
