--- a/bamboo-specs/deploy_cli.yaml
+++ b/bamboo-specs/deploy_cli.yaml
@@ -183,6 +183,7 @@ Deploy artifacts:
       ${system.HOME}/.ssh: /root/.ssh
     docker-run-arguments: [ ]
   tasks:
+    - clean
     - checkout:
         description: Checkout Default Repository
         force-clean-build: 'true'
@@ -196,7 +197,15 @@ Deploy artifacts:
             printf "%b\n" "${bamboo_sshSecretKey}" > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
 
+            git config user.email "Bamboo"
+            git config user.name "Bamboo"
+
             VERSION=$(cat conandata.yml | grep "[0-9]*\.[0-9]*." | tail -1 | sed "s/\"//" | sed "s/\"\://" | sed "s/ //g")
+
+            # Update version in install script and push tag
+            sed -i -e "s/^version='[0-9\.]*'$/version='${VERSION}'/" scripts/install.sh
+            git add scripts/install.sh
+            git commit -m "Automatic increment version for install script"
             TAG=v${VERSION}
             git tag -d ${TAG} || true
             git tag ${TAG}
