Pull request 569: Fix not pushing branch
Squashed commit of the following:

commit 7f0d9cf2e9d31e81117ef41d18aa2e794c9b9de4
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Dec 22 15:14:14 2025 +0400

    Explicitly specify remote and head for push to correspond to endpoint

commit c80ff1b3d36621edd25f83ee776cc7d0f7d7608e
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Dec 22 15:13:26 2025 +0400

    Add skipci to version increment for install script commit

commit e8c4527ff55c68dd3ad5a85ec9756c480db2cd63
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Dec 22 14:43:54 2025 +0400

    Fix not pushing branch

--- a/bamboo-specs/deploy_cli.yaml
+++ b/bamboo-specs/deploy_cli.yaml
@@ -205,11 +205,12 @@ Deploy artifacts:
             # Update version in install script and push tag
             sed -i -e "s/^version='[0-9\.]*'$/version='${VERSION}'/" scripts/install.sh
             git add scripts/install.sh
-            git commit -m "Automatic increment version for install script"
+            git commit -m "skipci: Automatic increment version for install script"
             TAG=v${VERSION}
             git tag -d ${TAG} || true
             git tag ${TAG}
             git remote set-url origin "${bamboo_planRepository_1_repositoryUrl}"
+            git push origin HEAD
             git push origin ${TAG}
 
             # TODO: change to bamboo_githubPublicRepoPassword when repo become public
