skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1189,3 +1189,5 @@ commit_hash:
     hash: "5809aff6a7b9d0a8a86f1b9fd7e93650a36ae431"
   "0.99.72":
     hash: "593783d291465a6f7bc575a91ff5a64a546410be"
+  "0.99.73":
+    hash: "7e2ce27f21b773df7c181eaed07b384f39ebebdf"
