skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1193,3 +1193,5 @@ commit_hash:
     hash: "7e2ce27f21b773df7c181eaed07b384f39ebebdf"
   "0.99.74":
     hash: "2fa0166c592851ccd57cab81bab7942770a3c1d6"
+  "0.99.75":
+    hash: "d5e374cd1b8b9087d975f565f359886517b3bd38"
