--- a/conandata.yml
+++ b/conandata.yml
@@ -1195,3 +1195,5 @@ commit_hash:
     hash: "2fa0166c592851ccd57cab81bab7942770a3c1d6"
   "0.99.75":
     hash: "d5e374cd1b8b9087d975f565f359886517b3bd38"
+  "0.99.76":
+    hash: "357745380c27299b4d987efe23da4aeada5359c9"
