Pull request 577: Added debug instructions
Squashed commit of the following:

commit 1566a751dd442c3cc31c990bdef54f590306ba78
Author: Andrey Meshkov <am@adguard.com>
Date:   Fri Dec 26 01:02:14 2025 +0300

    Remove unused expose from dockerfile

commit d7012f793926d3e85629179c2393ca0386d8baf2
Author: Andrey Meshkov <am@adguard.com>
Date:   Fri Dec 26 00:56:12 2025 +0300

    Added debug instructions

--- a/trusttunnel/CMakeLists.txt
+++ b/trusttunnel/CMakeLists.txt
@@ -22,18 +22,15 @@ set(SOURCE_FILES
         )
 
 add_library(vpnlibs_trusttunnel EXCLUDE_FROM_ALL ${SOURCE_FILES})
-target_include_directories(vpnlibs_common PUBLIC include)
+target_include_directories(vpnlibs_trusttunnel PUBLIC include)
 
 find_package(cxxopts REQUIRED)
-find_package(native_libs_common REQUIRED)
 find_package(magic_enum REQUIRED)
-find_package(native_libs_common REQUIRED)
 find_package(tomlplusplus REQUIRED)
 find_package(nlohmann_json REQUIRED)
 
 target_link_libraries(vpnlibs_trusttunnel vpnlibs_core cxxopts::cxxopts)
 target_link_libraries(vpnlibs_trusttunnel magic_enum::magic_enum)
-target_link_libraries(vpnlibs_trusttunnel native_libs_common::native_libs_common)
 target_link_libraries(vpnlibs_trusttunnel tomlplusplus::tomlplusplus)
 target_link_libraries(vpnlibs_trusttunnel nlohmann_json::nlohmann_json)
 if (NOT MSVC)
